# plex-language-search

./: pyproject.toml
plex-language-search/: __init__.py  confighandler.py  main.py  plex_module.py
