[tool.poetry]
name = "plex-language-search"
version = "0.1.0"
description = ""
authors = ["0xChloe <chloe@catastrophesoftware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PlexAPI = "^4.15.10"
requests = "^2.31.0"
typer = "^0.9.0"
python-dotenv = "^1.0.1"
rtoml = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
